--- a/playbook.yml
+++ b/playbook.yml
@@ -1,1 +1,8 @@
-
+- name: my playbook
+  hosts: localhost
+  become: yes
+  tasks:
+    - name: ensure apache is at the latest version
+      yum:
+        name: httpd
+        state: latest
