--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 - name: my playbook
   hosts: localhost
-  become: yes
-  become_method: su
   tasks:
     - debug:
         msg: 'Running on all dbservers and webserver'
+    - debug:
+        msg: ansible_default_ipv4.address
