--- a/playbook.yml
+++ b/playbook.yml
@@ -4,4 +4,4 @@
     - debug:
         msg: 'Running on all dbservers and webserver'
     - debug:
-        msg: "{{ ansible_default_ipv4.address }}"
+        msg: "{{ ansible_hostname }}"
