--- a/extensions/eda/rulebooks/rulebook.yaml
+++ b/extensions/eda/rulebooks/rulebook.yaml
@@ -4,7 +4,7 @@
     - sabre1041.eda.k8s:
         api_version: v1
         kind: ConfigMap
-        namespace: default
+        namespace: dev-game-app
   rules:
     - name: Notify
       condition: event.type == "ADDED"
