--- a/extensions/eda/rulebooks/rulebook.yaml
+++ b/extensions/eda/rulebooks/rulebook.yaml
@@ -3,7 +3,7 @@
   sources:
     - sabre1041.eda.k8s:
         api_version: v1
-        kind: secret
+        kind: configmap
         namespace: ansible-automation-platform
   rules:
     - name: Notify
