--- a/extensions/eda/rulebooks/rulebook.yaml
+++ b/extensions/eda/rulebooks/rulebook.yaml
@@ -3,8 +3,9 @@
   sources:
     - sabre1041.eda.k8s:
         api_version: v1
-        kind: configmap
+        kind: ConfigMap
         namespace: ansible-automation-platform
+        delay: 20
   rules:
     - name: Notify
       condition: event.type == "ADDED"
